# Trekking

./: .gitignore
Arduino/MPU/: MPU.ino
Arduino/Mega/: Constants.h  ControlVariables.cpp  ControlVariables.h  FollowDirectionState.cpp  FollowDirectionState.h  IdleState.cpp  IdleState.h  Locomotion.cpp  Mega.ino  RPiMessageHandler.cpp  RPiMessageHandler.h  RPiMessageHandlers.cpp  RPiMessageHandlers.h
Pi/Detector/: README.md
Raspberry Pi/: README.md
Raspberry Pi/Detector/: CMakeLists.txt  Exemple.cpp  HaarCascadeDetector.cpp
Raspberry Pi/Detector/include/: Detector.h  IntRect.h
Raspberry Pi/Full/: CMakeLists.txt  README.md
Raspberry Pi/Full/Python/: FileVideoStream.py  Full.py  PiVideoStream.py  Trekking.py  VideoStream.py  videostream_demo.py
Raspberry Pi/Full/src/: Full.py  Main.cpp
Raspberry Pi/Serial/: README.md
Ultrasonic/: Ultrasonic.cpp  Ultrasonic.h
arduino/: README.md
arduino/Mega/: .gitignore  CommandHandlers.cpp  CommandHandlers.h  Constants.h  Macros.h  Mega.ino  Pins.h  States.cpp  States.h  Transform.H  UltrassonicArray.cpp  UltrassonicArray.h  Variables.cpp  Variables.h
desktop/Monitor/: Monitor.sln
firmware/: README.md
firmware/pi/: SystemInfo.py  _Demo_Bluetooth.py  _Demo_PyCmdMesseger.py  _Demo_VideoStream.py  main.py  samplesExtractor.py  testTrackerWithVideo.py
hardware/: .gitignore
hardware/alimentação/: Placa de alimentação.PcbDoc  Placa de alimentação.PrjPcb  Placa de alimentação.PrjPcbStructure  Placa de alimentação.SchDoc
hardware/libraries/: Components.PcbLib  Components.SchLib  Connectors.PcbLib  Connectors.SchLib  Header.PcbLib  Header.SchLib  KK Conectors.SchLib
hardware/shield/: Arduino MEGA blank shield.pcbdoc  Arduino MEGA blank shield.pcbdoc.htm  ArduinoMegaSheild.PrjPcb  ArduinoMegaSheild.PrjPcbStructure  Header.PcbLib  Header.SchLib  KK Connectors.PcbLib  Shield Arduino.SchDoc
lib/Algebra/: BitMatrix.hpp  Matrix.hpp  StaticMatrix.hpp  Vector2.hpp
lib/BMSerial/: BMSerial.cpp
lib/CalLib/: CalLib.cpp
lib/Collections/: PriorityQueue.hpp
lib/CustomTypes/: Checked.hpp  Color.hpp  Tuple.hpp
lib/Filter/: AverageFilter.cpp  AverageFilter.hpp  Filter.hpp  SimpleMovingAverageFilter.cpp  SimpleMovingAverageFilter.hpp  TransitionFilter.hpp
lib/I2CDev/: I2Cdev.cpp  I2Cdev.h
lib/InputSource/: InputSource.hpp
lib/Logger/: BufferLogger.cpp  BufferLogger.hpp  Logger.hpp  PrintLogger.hpp
lib/MPU9150Lib/: MPU9150Lib.cpp  MPU9150Lib.h
lib/MotionDriver/: inv_mpu.cpp  inv_mpu.h
lib/MotorController/: DifferentialDriveController.cpp  DifferentialDriveController.hpp
lib/PIDController/: PIDController.cpp
lib/Pathfinding/: AStar.cpp  AStar.hpp
lib/Position/: Position.hpp
lib/RoboClaw/: RoboClaw.cpp  RoboClaw.h
lib/SystemController/: SystemController.cpp
mechanical/: .gitignore
mpu/: mpu.ino
pi/: CommandMessager.py  CommandMessenger.py  SystemInfo.py  Trekking.py  _Demo_PyCmdMesseger.py  _Demo_TestCascade.py  main.py  mainWithTracking.py
src/: Includes.h  Longuinho.cpp  LonguinhoEncoder.cpp  LonguinhoEncoder.hpp  LonguinhoMotorController.cpp  LonguinhoMotorController.hpp  LonguinhoSensoring.cpp  LonguinhoSensoring.hpp  Pins.h
(+282 files in other folders)
